fixed the alert message icon alignment in form validation so when in icon displays and hides, there's no jumping.

--- a/src/components/_form-validation.scss
+++ b/src/components/_form-validation.scss
@@ -4,19 +4,22 @@
 @mixin warning-message-icon() {
 	color: $color-accent-4;
 	content: "\e92c";
-	font: 25px mf-icons;
+	font: 22px mf-icons;
+	line-height: $font-size-large;
 	padding-right: 5px;
+	vertical-align: middle;
 }
 @mixin validate-icon() {
 	color: $color-accent-5;
 	content: "\e923";
-	font: 25px mf-icons;
+	font: 22px mf-icons;
+	line-height: $font-size-large;
 	padding-right: 5px;
+	vertical-align: middle;
 }
 
 label {
 	display: inline-block;
-	margin-bottom: 3px;
 }
 span.required {
 	color: $color-accent-4;
@@ -35,7 +38,7 @@ span.required {
 .invalid-message {
 	color: $color-accent-4;
 	display: none;
-	padding-top: 5px;
+	padding-top: 3px;
 }
 
 .form-message {
@@ -52,8 +55,6 @@ span.required {
 	& i:after {
 		@include warning-message-icon;
 		padding-left: 3px;
-		position: relative;
-		top: 6px;
 	}
 
 	& input {
@@ -71,13 +72,11 @@ img.wait-icon {display: none;}
 	&.valid i:after {
 		@include validate-icon;
 		padding-left: 3px;
-		position: relative;
-		top: 6px;
 	}
 	&.validating img.wait-icon {
 		display: inline-block;
 		padding-left: 3px;
-		position: relative;
-		top: 6px;
+		vertical-align: middle;
+		height: 20px;
 	}
 }
